# YUMI_IK_Solver

./: .gitmodules  README.md  rviz_yumi.rviz
ABB_needed_packages/abb_experimental/abb_egm_driver/: CMakeLists.txt
ABB_needed_packages/abb_experimental/abb_egm_driver/launch/: robot_interface.launch
ABB_needed_packages/abb_experimental/abb_egm_driver/src/: abb_generic_joint_trajectory_action_node.cpp  abb_joint_trajectory_action_abstract.cpp
ABB_needed_packages/abb_experimental/abb_egm_interface/include/abb_egm_interface/: egm_common.h  egm_common_math.h  egm_server.h
ABB_needed_packages/abb_experimental/abb_egm_interface/src/: egm_common.cpp  egm_common_math.cpp  egm_interface_default.cpp  egm_message_manager.cpp  egm_simple_interpolation_manager.cpp
ABB_needed_packages/abb_experimental/abb_irb1600_support/: CMakeLists.txt
ABB_needed_packages/abb_experimental/abb_irb1600_support/additional/irb1600x145_moveit_config/config/rapid_based_solution/: joint_limits.yaml
ABB_needed_packages/abb_experimental/abb_irb1600_support/launch/: robot_interface_download_irb1600x145.launch
ABB_needed_packages/abb_experimental/abb_irb1600_support/meshes/irb1600x145/collision/: link_1.stl  link_2.stl  link_6.stl
ABB_needed_packages/abb_experimental/abb_irb1600_support/meshes/irb1600x145/visual/: link_1.dae
ABB_needed_packages/abb_experimental/abb_irb1600_support/urdf/: irb1600x145_macro.xacro
ABB_needed_packages/abb_experimental/abb_irb1600x145_moveit_config/config/: joint_limits.yaml
ABB_needed_packages/abb_experimental/abb_irb1600x145_moveit_config/launch/: abb_irb1600x145_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  trajectory_execution.launch.xml
ABB_needed_packages/abb_experimental/abb_rws_interface/: CMakeLists.txt
ABB_needed_packages/abb_experimental/abb_rws_interface/include/abb_rws_interface/: rws_curl_client.h  rws_interface_common.h  rws_rapid_data.h
ABB_needed_packages/abb_experimental/abb_rws_interface/src/: rws_client.cpp  rws_curl_client.cpp  rws_interface_yumi.cpp
ABB_needed_packages/industrial_core/industrial_trajectory_filters/: CMakeLists.txt
ABB_needed_packages/yumi-1/yumi_description/urdf/: yumi.urdf.xacro
ABB_needed_packages/yumi-1/yumi_hw/: CMakeLists.txt
ABB_needed_packages/yumi-1/yumi_hw/include/yumi_hw/: yumi_gripper_node.h
ABB_needed_packages/yumi-1/yumi_hw/src/: yumi_hw_egm.cpp
ABB_needed_packages/yumi-1/yumi_launch/launch/: yumi_traj_vel_control.launch  yumi_vel_control.launch
IK_solver/: .gitattributes  .gitmodules
abb_experimental/abb_egm_driver/: LICENSE  package.xml
abb_experimental/abb_egm_driver/include/abb_egm_driver/: abb_joint_trajectory_action_abstract.h  abb_joint_trajectory_actions.h  abb_publisher_handler.h
abb_experimental/abb_egm_driver/src/: abb_joint_trajectory_action_dual_armed.cpp  abb_joint_trajectory_action_single_arm.cpp  abb_publisher_handler.cpp
abb_experimental/abb_egm_interface/: CMakeLists.txt  package.xml
abb_experimental/abb_egm_interface/include/abb_egm_interface/: egm_common_auxiliary.h  egm_interface_default.h  egm_message_manager.h  egm_simple_interpolation_manager.h
abb_experimental/abb_egm_interface/proto/: egm_interface.proto
abb_experimental/abb_egm_interface/src/: egm_common_auxiliary.cpp  egm_server.cpp
abb_experimental/abb_irb1600_support/: package.xml
abb_experimental/abb_irb1600_support/launch/: load_irb1600x145.launch  robot_state_visualize_irb1600x145.launch  test_irb1600x145.launch
abb_experimental/abb_irb1600_support/meshes/irb1600x145/collision/: base_link.stl  link_3.stl  link_4.stl  link_5.stl
abb_experimental/abb_irb1600_support/meshes/irb1600x145/visual/: base_link.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
abb_experimental/abb_irb1600_support/urdf/: irb1600x145.urdf  irb1600x145.xacro
abb_experimental/abb_irb1600x145_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
abb_experimental/abb_irb1600x145_moveit_config/config/: abb_irb1600x145.srdf
abb_experimental/abb_irb1600x145_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  warehouse.launch
abb_experimental/abb_rws_interface/: package.xml
abb_experimental/abb_rws_interface/include/abb_rws_interface/: rws_client.h  rws_interface.h  rws_interface_yumi.h  rws_interface_yumi_common.h
abb_experimental/abb_rws_interface/src/: rws_interface.cpp  rws_rapid_data.cpp
miscellaneous/motion-generators/: CMakeLists.txt  README.md  catkin.options  package.xml
miscellaneous/motion-generators/include/: CDDynamics.h  DSMotionGenerator.h  GMR_L.h  OrientationInterpolator.h  SimpleMotionGenerator.h  SmoothTransition.h
miscellaneous/object_recognition/: CMakeLists.txt  package.xml
miscellaneous/object_recognition/scripts/: data_listener.py
miscellaneous/object_recognition/src/: Object_positions.cpp
miscellaneous/robot-toolkit/: IK_solver_performace_Dynamical.txt
simple_example_two_kuka/: CMakeLists.txt  package.xml
simple_example_two_kuka/Scenario/include/: Bi_manual_scenario.h  mathlib_eigen_conversions.h
simple_example_two_kuka/Scenario/src/: Bi_manual_scenario.cpp  mathlib_eigen_conversions.cpp
simple_example_two_kuka/config/: Scenario.xml  test.xml
simple_example_two_kuka/data/: A_Matrix.txt  A_Matrix.txt~  YUMI_workspace_Model_left_Sigma.txt  YUMI_workspace_Model_left_Threshold.txt  YUMI_workspace_Model_left_mu.txt  YUMI_workspace_Model_left_prior.txt  YUMI_workspace_Model_mu.txt  YUMI_workspace_Model_prior.txt  YUMI_workspace_Model_right.mat  YUMI_workspace_Model_right_Sigma.txt  YUMI_workspace_Model_right_Threshold.txt  YUMI_workspace_Model_right_mu.txt  YUMI_workspace_Model_right_prior.txt
