<?xml version="1.0" ?><package>
  <name>yumi_ik_solver</name>
  <version>0.0.0</version>
  <description>The yumi_ik_solver package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sina@todo.todo">sina</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/yumi_ik_solver</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>multiarm_ds</build_depend>
<build_depend>mathlib</build_depend>
  <build_depend>robotlib</build_depend>
  <run_depend>multiarm_ds</run_depend>
<run_depend>mathlib</run_depend>
  <run_depend>robotlib</run_depend>

    <build_depend>eigen</build_depend>
  <run_depend>eigen</run_depend>

  <build_depend>skinematics</build_depend>
    <run_depend>skinematics</run_depend>
  <build_depend>qp_ik_solver</build_depend>
    <run_depend>qp_ik_solver</run_depend>
  <build_depend>sg_differentiation</build_depend>
    <run_depend>sg_differentiation</run_depend>

  <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>

 <build_depend>svm_grad</build_depend>
  <run_depend>svm_grad</run_depend>

  <build_depend>intercept_finder</build_depend>
    <run_depend>intercept_finder</run_depend>

  <build_depend>hand_commands</build_depend>
    <run_depend>hand_commands</run_depend>
    
  <build_depend>kuka_fri_bridge</build_depend>
    <run_depend>kuka_fri_bridge</run_depend>
    




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
