<?xml version="1.0"?>
<package>
  <name>abb_egm_driver</name>
  <version>0.0.0</version>
  <description>
    The abb_egm_driver package uses ABB RobotWare features Externally Guided Motion (EGM) and Robot Web Services (RWS) to control ABB's six and seven axes robots.
  </description>
  
  <maintainer email="linux@todo.todo">linux</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>industrial_robot_client</build_depend>
  <build_depend>industrial_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>simple_message</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>abb_egm_interface</build_depend>
  <build_depend>abb_rws_interface</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>industrial_robot_client</run_depend>
  <run_depend>industrial_utils</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>abb_egm_interface</run_depend>
  <run_depend>abb_rws_interface</run_depend>
</package>
