<?xml version="1.0"?>
<package>
  <name>abb_egm_interface</name>
  <version>0.0.0</version>
  <description>
    The abb_egm_interface package for using ABB Externally Guided Motion (EGM).
  </description>

  <maintainer email="linux@todo.todo">linux</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>control_msgs</run_depend>
  <run_depend>protobuf</run_depend>
  <run_depend>roscpp</run_depend>
</package>
