<?xml version="1.0"?>
<package>
  <name>abb_rws_interface</name>
  <version>0.0.0</version>
  <description>
    The abb_rws_interface package for using ABB Robot Web Services (RWS).
  </description>

  <maintainer email="linux@todo.todo">linux</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>curl</build_depend>
  
  <run_depend>curl</run_depend>
</package>
